vlib/v/parser/tests/mut_blank_ident_err.out
vlib/v/parser/tests/mut_blank_ident_err.vv:1:1: error: cannot use `mut` on `_`
    1 | mut _ = 3
      | ~~~
